# WorkIndia-API-Challenge

./: .gitignore  README.md  pyproject.toml
dinner_res_sys/: manage.py
dinner_res_sys/dinner_res_sys/: asgi.py  settings.py  urls.py  wsgi.py
dinner_res_sys/reservation/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
