[tool.poetry]
name = "workindia-env"
version = "0.1.0"
description = ""
authors = ["Reuben-Stephen-John <reuben.sj2003@gmail.com>"]
readme = "README.md"
packages = [{include = "workindia_env"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
